[package]
name = "hashfes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
md5 = "0.7.0"
ripemd = "0.1.3"
sha2 = "0.10.6"
