[package]
name = "hashfes"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
md-5 = "0.10.6"
ripemd = "0.1.3"
sha2 = "0.10.8"
rustix = "0.38.34"
